syntax = "proto3";

package v1.article;

option go_package = "api/article/v1;v1";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

service ArticleService{
  rpc CreateArticle(Article) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "api/v1/article",
      body: "*",
    };
  }

  rpc GetAllArticle(google.protobuf.Empty) returns (GetAllArticleReply) {
    option (google.api.http) = {
      get: "api/v1/articles",
    };
  }

  rpc GetArticleById(GetArticleByIdRequest) returns (GetArticleByIdReply) {
    option (google.api.http) = {
      get: "api/v1/article/{id}",
    };
  }

  rpc GetArticlesByTag(GetArticlesByTagRequest) returns (GetArticlesByTagReply) {
    option (google.api.http) = {
      get: "/api/v1/articles/bytag"
    };
  }

  rpc UpdateArticle(Article) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      put: "api/v1/article/{id}",
      body: "*",
    };
  }

  rpc DeleteArticle(DeleteArticleRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "api/v1/article/{id}",
    };
  }
}


message Article {
  int64 id = 1;
  string title = 2;
  string summary = 3;
  string content_url = 4;
  int64 status = 5;
  int64 view_count = 6;
  string tags = 7;
  repeated string image_url = 8;
}

message GetAllArticleReply {
  repeated Article articles = 1;
  int64 total = 2;
}

message GetArticleByIdRequest {
  int64 id = 1;
}

message GetArticleByIdReply {
  Article article = 1;
}

message GetArticlesByTagRequest {
  string tag = 1;
}

message GetArticlesByTagReply {
  repeated Article articles = 1;
}


message DeleteArticleRequest {
  int64 id = 1;
}
